deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-admin
  name: frontend-admin
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend-admin
  type: "ClusterIP"
