deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization, x-access-token
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: https://dev-client.instakash.net, https://admin-client.instakash.net, https://adminprod.instakash.net, https://app.instakash.net
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    external-dns.alpha.kubernetes.io/hostname: client.dev.instakash.net
  name: frontend-admin
spec:
  rules:
    - host: client.dev.instakash.net
      http:
        paths:
          - pathType: Prefix
            backend:
              service: 
                name: frontend-admin
                port:
                  number: 80
            path: /
  tls:
    - secretName: client.dev.instakash.net
      hosts:
      - client.dev.instakash.net
